--- a/ui/package.json
+++ b/ui/package.json
@@ -6,6 +6,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.11",
+    "@reduxjs/toolkit": "^1.4.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -13,20 +14,22 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
-    "autoprefixer": "^10.0.1",
-    "postcss-cli": "^8.0.0",
+    "@types/react-redux": "^7.1.9",
+    "@types/webpack-env": "^1.15.3",
+    "antd": "^4.7.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.1",
     "react-scripts": "3.4.3",
-    "tailwindcss": "^1.8.11",
+    "redux": "^4.0.5",
+    "ts-pattern": "^1.1.0",
     "typescript": "~3.7.2"
   },
   "scripts": {
-    "start": "yarn build:style && react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "build:style": "tailwind build src/styles/index.css -o src/styles/tailwind.css"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
