--- a/ui/package.json
+++ b/ui/package.json
@@ -17,11 +17,13 @@
     "@types/react-redux": "^7.1.9",
     "@types/webpack-env": "^1.15.3",
     "antd": "^4.7.0",
+    "axios": "^0.21.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
     "react-scripts": "3.4.3",
     "redux": "^4.0.5",
+    "ts-debounce": "^2.0.1",
     "ts-pattern": "^1.1.0",
     "typescript": "~3.7.2"
   },
